[package]
name = "ramp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
rodio = {version="0.17.3", features = ["symphonia-all"]}
symphonia = {version = "0.5.2"}
serde = "1.0.190"
audiotags = {path = "./src/audiotags", version = "0.5.0"}
